--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <p data-en="Tell us your AI vision and technical approach" data-es="Cuéntanos tu visión de IA y enfoque técnico">Tell us your AI vision and technical approach</p>
             </div>
             <div class="contact-content">
-                <form class="contact-form">
+                <form class="contact-form" id="contact-form">
                     <div class="form-group">
                         <input type="text" id="name" name="name" placeholder="Your full name" data-placeholder-en="Your full name" data-placeholder-es="Tu nombre completo" required>
                     </div>
@@ -269,6 +269,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
