Update team section with accurate founder experience and fix AI-First Ventures references

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
-                <h2 data-en="Why AI-First Ventures?" data-es="¿Por qué AI-First Ventures?">Why AI-First Ventures?</h2>
+                <h2 data-en="Why AI Founders?" data-es="¿Por qué AI Founders?">Why AI Founders?</h2>
                 <p data-en="We believe the future belongs to founders who think AI-first, not just use AI tools" data-es="Creemos que el futuro pertenece a fundadores que piensan AI-first, no solo usan herramientas de IA">We believe the future belongs to founders who think AI-first, not just use AI tools</p>
             </div>
             <div class="about-grid">
@@ -186,29 +186,29 @@
         <div class="container">
             <div class="section-header">
                 <h2 data-en="Our Team" data-es="Nuestro Equipo">Our Team</h2>
-                <p data-en="Founded by AI-first entrepreneurs who understand the technical and business challenges of building AI-native products" data-es="Fundado por emprendedores AI-first que entienden los desafíos técnicos y de negocio de construir productos AI-native">Founded by AI-first entrepreneurs who understand the technical and business challenges of building AI-native products</p>
+                <p data-en="Founded by serial tech entrepreneurs who understand the technical and business challenges of building technology companies across multiple industries" data-es="Fundado por emprendedores seriales de tecnología que entienden los desafíos técnicos y de negocio de construir empresas tecnológicas en múltiples industrias">Founded by serial tech entrepreneurs who understand the technical and business challenges of building technology companies across multiple industries</p>
             </div>
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-avatar">
                         <i class="fas fa-user-tie"></i>
                     </div>
-                    <h3 data-en="AI Industry Veterans" data-es="Veteranos de la Industria IA">AI Industry Veterans</h3>
-                    <p data-en="Our team includes former founders who have built AI-first products and understand the unique challenges of scaling AI-native businesses." data-es="Nuestro equipo incluye ex-fundadores que han construido productos AI-first y entienden los desafíos únicos de escalar negocios AI-native.">Our team includes former founders who have built AI-first products and understand the unique challenges of scaling AI-native businesses.</p>
+                    <h3 data-en="Serial Tech Entrepreneurs" data-es="Emprendedores Seriales de Tecnología">Serial Tech Entrepreneurs</h3>
+                    <p data-en="Our team includes serial founders with extensive experience across multiple industries including fintech, gaming, social networks, dating, and real estate. We understand the challenges of building and scaling technology companies." data-es="Nuestro equipo incluye fundadores seriales con amplia experiencia en múltiples industrias incluyendo fintech, gaming, redes sociales, dating, y bienes raíces. Entendemos los desafíos de construir y escalar empresas de tecnología.">Our team includes serial founders with extensive experience across multiple industries including fintech, gaming, social networks, dating, and real estate. We understand the challenges of building and scaling technology companies.</p>
                 </div>
                 <div class="team-card">
                     <div class="team-avatar">
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <h3 data-en="AI-Native Experience" data-es="Experiencia AI-Native">AI-Native Experience</h3>
-                    <p data-en="We bring deep experience in AI/ML, computer vision, NLP, and emerging AI technologies across different verticals and use cases." data-es="Traemos profunda experiencia en IA/ML, visión computacional, NLP, y tecnologías emergentes de IA en diferentes verticales y casos de uso.">We bring deep experience in AI/ML, computer vision, NLP, and emerging AI technologies across different verticals and use cases.</p>
+                    <h3 data-en="Technology & AI Expertise" data-es="Experiencia en Tecnología e IA">Technology & AI Expertise</h3>
+                    <p data-en="We bring deep experience in modern technology stacks, AI/ML integration, and emerging technologies. Our technical background helps us identify and support founders building the next generation of tech companies." data-es="Traemos profunda experiencia en stacks tecnológicos modernos, integración de IA/ML, y tecnologías emergentes. Nuestro background técnico nos ayuda a identificar y apoyar fundadores construyendo la próxima generación de empresas tecnológicas.">We bring deep experience in modern technology stacks, AI/ML integration, and emerging technologies. Our technical background helps us identify and support founders building the next generation of tech companies.</p>
                 </div>
                 <div class="team-card">
                     <div class="team-avatar">
                         <i class="fas fa-handshake"></i>
                     </div>
-                    <h3 data-en="AI-First Founders" data-es="Fundadores AI-First">AI-First Founders</h3>
-                    <p data-en="We are AI-first founders ourselves, so we truly understand the technical challenges, market opportunities, and scaling complexities of building AI-native products." data-es="Somos fundadores AI-first nosotros mismos, por lo que realmente entendemos los desafíos técnicos, oportunidades de mercado, y complejidades de escalado de construir productos AI-native.">We are AI-first founders ourselves, so we truly understand the technical challenges, market opportunities, and scaling complexities of building AI-native products.</p>
+                    <h3 data-en="Founder-First Approach" data-es="Enfoque Founder-First">Founder-First Approach</h3>
+                    <p data-en="We are founders ourselves, so we truly understand the technical challenges, market opportunities, and scaling complexities of building technology companies. We focus on supporting founders who are building the future with AI." data-es="Somos fundadores nosotros mismos, por lo que realmente entendemos los desafíos técnicos, oportunidades de mercado, y complejidades de escalado de construir empresas tecnológicas. Nos enfocamos en apoyar fundadores que están construyendo el futuro con IA.">We are founders ourselves, so we truly understand the technical challenges, market opportunities, and scaling complexities of building technology companies. We focus on supporting founders who are building the future with AI.</p>
                 </div>
             </div>
         </div>
