--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                 <div class="criteria-item">
                     <div class="criteria-number">02</div>
                     <h3 data-en="Technical Background" data-es="Background Técnico">Technical Background</h3>
-                    <p data-en="Solid experience in software development, preferably with knowledge in AI and modern tools." data-es="Experiencia sólida en desarrollo de software, preferiblemente con conocimiento en IA y herramientas modernas.">Solid experience in software development, preferably with knowledge in AI and modern tools.</p>
+                    <p data-en="Solid experience in software development with proven expertise using AI coding tools like Cursor, Claude Code, and GitHub Copilot. We seek founders who leverage AI to accelerate development and build more efficiently." data-es="Experiencia sólida en desarrollo de software con expertise comprobado usando herramientas de código con IA como Cursor, Claude Code, y GitHub Copilot. Buscamos fundadores que aprovechen la IA para acelerar el desarrollo y construir más eficientemente.">Solid experience in software development with proven expertise using AI coding tools like Cursor, Claude Code, and GitHub Copilot. We seek founders who leverage AI to accelerate development and build more efficiently.</p>
                 </div>
                 <div class="criteria-item">
                     <div class="criteria-number">03</div>
                     <h3 data-en="AI-First Approach" data-es="Enfoque AI-First">AI-First Approach</h3>
-                    <p data-en="Proven experience with AI tools (Cursor, Claude, GitHub Copilot) and commitment to building with lean teams." data-es="Experiencia comprobada con herramientas de IA (Cursor, Claude, GitHub Copilot) y compromiso con construir con equipos lean.">Proven experience with AI tools (Cursor, Claude, GitHub Copilot) and commitment to building with lean teams.</p>
+                    <p data-en="Proven experience with AI tools across all business functions: coding (Cursor, Claude, GitHub Copilot), design (Midjourney, DALL-E), marketing (Jasper, Copy.ai), and process automation. We seek founders who use AI to build lean, efficient companies." data-es="Experiencia comprobada con herramientas de IA en todas las funciones del negocio: programación (Cursor, Claude, GitHub Copilot), diseño (Midjourney, DALL-E), marketing (Jasper, Copy.ai), y automatización de procesos. Buscamos fundadores que usen IA para construir empresas lean y eficientes.">Proven experience with AI tools across all business functions: coding (Cursor, Claude, GitHub Copilot), design (Midjourney, DALL-E), marketing (Jasper, Copy.ai), and process automation. We seek founders who use AI to build lean, efficient companies.</p>
                 </div>
             </div>
         </div>
