Simplify AI-First Approach to focus on business functions without specific tool examples

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="criteria-item">
                     <div class="criteria-number">03</div>
                     <h3 data-en="AI-First Approach" data-es="Enfoque AI-First">AI-First Approach</h3>
-                    <p data-en="Proven experience with AI tools across all business functions: coding (Cursor, Claude, GitHub Copilot), design (Midjourney, DALL-E), marketing (Jasper, Copy.ai), and process automation." data-es="Experiencia comprobada con herramientas de IA en todas las funciones del negocio: programación (Cursor, Claude, GitHub Copilot), diseño (Midjourney, DALL-E), marketing (Jasper, Copy.ai), y automatización de procesos.">Proven experience with AI tools across all business functions: coding (Cursor, Claude, GitHub Copilot), design (Midjourney, DALL-E), marketing (Jasper, Copy.ai), and process automation.</p>
+                    <p data-en="Proven experience with AI tools across all business functions: design, marketing, sales, operations, and process automation." data-es="Experiencia comprobada con herramientas de IA en todas las funciones del negocio: diseño, marketing, ventas, operaciones, y automatización de procesos.">Proven experience with AI tools across all business functions: design, marketing, sales, operations, and process automation.</p>
                 </div>
             </div>
         </div>
