Update AI-First small teams section: swap to Claude Code, remove Copilot, and change 10-20 to 20-30

--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                         <i class="fas fa-robot"></i>
                     </div>
                     <h3 data-en="10x Productivity" data-es="Productividad 10x">10x Productivity</h3>
-                    <p data-en="AI tools like Cursor, Claude, and GitHub Copilot enable small teams to build at the speed of large engineering teams, but with lower costs and faster iteration." data-es="Herramientas de IA como Cursor, Claude, y GitHub Copilot permiten a equipos pequeños construir a la velocidad de equipos de ingeniería grandes, pero con menores costos e iteración más rápida.">AI tools like Cursor, Claude, and GitHub Copilot enable small teams to build at the speed of large engineering teams, but with lower costs and faster iteration.</p>
+                    <p data-en="AI tools like Cursor and Claude Code enable small teams to build at the speed of large engineering teams, but with lower costs and faster iteration." data-es="Herramientas de IA como Cursor y Claude Code permiten a equipos pequeños construir a la velocidad de equipos de ingeniería grandes, pero con menores costos e iteración más rápida.">AI tools like Cursor and Claude Code enable small teams to build at the speed of large engineering teams, but with lower costs and faster iteration.</p>
                 </div>
                 <div class="ai-card">
                     <div class="card-icon">
                         <i class="fas fa-users"></i>
                     </div>
                     <h3 data-en="Lean Operations" data-es="Operaciones Lean">Lean Operations</h3>
-                    <p data-en="Small teams with AI leverage can achieve what previously required 10-20 person teams. Focus on core value creation, not bureaucracy." data-es="Equipos pequeños con leverage de IA pueden lograr lo que anteriormente requería equipos de 10-20 personas. Enfócate en la creación de valor central, no en burocracia.">Small teams with AI leverage can achieve what previously required 10-20 person teams. Focus on core value creation, not bureaucracy.</p>
+                    <p data-en="Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, not bureaucracy." data-es="Equipos pequeños con leverage de IA pueden lograr lo que anteriormente requería equipos de 20-30 personas. Enfócate en la creación de valor central, no en burocracia.">Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, not bureaucracy.</p>
                 </div>
                 <div class="ai-card">
                     <div class="card-icon">
