Tweak Lean Operations copy: minimizing management overhead (ES/EN)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <h3 data-en="Lean Operations" data-es="Operaciones Lean">Lean Operations</h3>
-                    <p data-en="Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, not bureaucracy." data-es="Equipos pequeños con leverage de IA pueden lograr lo que anteriormente requería equipos de 20-30 personas. Enfócate en la creación de valor central, no en burocracia.">Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, not bureaucracy.</p>
+                    <p data-en="Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, minimizing management overhead." data-es="Equipos pequeños con leverage de IA pueden lograr lo que anteriormente requería equipos de 20-30 personas. Enfócate en la creación de valor central, minimizando la sobrecarga de gestión.">Small teams with AI leverage can achieve what previously required 20-30 person teams. Focus on core value creation, minimizing management overhead.</p>
                 </div>
                 <div class="ai-card">
                     <div class="card-icon">
