Replace header text with logo.svg and add logo styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>AI Founders</h2>
+                <a href="#home" class="logo-link">
+                    <img src="logo.svg" alt="AI Founders" class="logo-img">
+                </a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
