Update website with new color palette, logo integration, and improved footer design

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-graphic">
-                    <i class="fas fa-rocket"></i>
+                    <img src="symbol.svg" alt="AI Founders Symbol" class="hero-symbol">
                 </div>
             </div>
         </div>
@@ -247,24 +247,14 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
+            <div class="footer-divider"></div>
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h3>AI Founders</h3>
-                    <p data-en="We invest in AI-first founders building the future" data-es="Invertimos en fundadores AI-first construyendo el futuro">We invest in AI-first founders building the future</p>
+                    <img src="logo.svg" alt="AI Founders" class="footer-logo-img">
                 </div>
-                <div class="footer-links">
-                    <h4 data-en="Links" data-es="Enlaces">Links</h4>
-                    <ul>
-                        <li><a href="#home" data-en="Home" data-es="Inicio">Home</a></li>
-                        <li><a href="#about" data-en="About" data-es="Nosotros">About</a></li>
-                        <li><a href="#criteria" data-en="Criteria" data-es="Criterios">Criteria</a></li>
-                        <li><a href="#team" data-en="Team" data-es="Equipo">Team</a></li>
-                        <li><a href="#contact" data-en="Contact" data-es="Contacto">Contact</a></li>
-                    </ul>
+                <div class="footer-copyright">
+                    <p data-en="&copy; 2025 AI Founders. All rights reserved." data-es="&copy; 2025 AI Founders. Todos los derechos reservados.">&copy; 2025 AI Founders. All rights reserved.</p>
                 </div>
-            </div>
-            <div class="footer-bottom">
-                <p data-en="&copy; 2024 AI Founders. All rights reserved." data-es="&copy; 2024 AI Founders. Todos los derechos reservados.">&copy; 2024 AI Founders. All rights reserved.</p>
             </div>
         </div>
     </footer>
