Restore rocket icon with larger size and improved styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Founders - VC for AI-First Founders</title>
-    <link rel="stylesheet" href="styles.css?v=3">
+    <link rel="stylesheet" href="styles.css?v=5">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -61,9 +61,9 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="hero-graphic">
-                    <img src="symbol.svg" alt="AI Founders Symbol" class="hero-symbol">
-                </div>
+            <div class="hero-graphic">
+                <i class="fas fa-rocket"></i>
+            </div>
             </div>
         </div>
     </section>
